--- a/org.toxsoft.skf.sad.skide/build.properties
+++ b/org.toxsoft.skf.sad.skide/build.properties
@@ -1,6 +1,8 @@
 bin.includes = META-INF/,\
                .,\
                fragment.e4xmi,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/,\
+               icons/
 source.. = src/
 output.. = bin/
