--- a/org.toxsoft.skf.sad.skide/build.properties
+++ b/org.toxsoft.skf.sad.skide/build.properties
@@ -2,7 +2,6 @@ bin.includes = META-INF/,\
                .,\
                fragment.e4xmi,\
                plugin.xml,\
-               OSGI-INF/,\
-               icons/
+               OSGI-INF/
 source.. = src/
 output.. = bin/
